# cement

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package.json  tailwind.config.js
.gitea/workflows/: deploy.yaml
.github/workflows/: deploy.yaml
media/: masked-screenshot.afdesign
migrations/: 000_initial.sql  001_highlighting.sql
src/: app.rs  args.rs  env.rs  lib.rs  main.rs  model.rs  templates.rs
style/: highlight.css  input.css
style/themes/: tokyo-night-dark.css  tokyo-night-light.css
templates/: base.html  index.html  paste.html
templates/highlight/: languages.html
