[package]
name = "cement"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
futures-util = { version = "0.3" }
gpw = { version = "0.1" }
lazy_static = { version = "1.4" }
poem = { version = "1.3" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "time"] }
tera = { version = "1.19" }
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1.32", features = ["full"] }
toml = { version = "0.8" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
build-data = { version = "0.1" }
